DevOCL/src/objects/CLQ_Payment_Received__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Amount__c</fullName>
        <label>Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Payment Received object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Payment_Receive_Date__c</fullName>
        <label>Payment Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Transaction</label>
        <referenceTo>CLQ_Program_Transaction__c</referenceTo>
        <relationshipLabel>Payments Received</relationshipLabel>
        <relationshipName>Payments_Received</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>CLQ_Program__c</referenceTo>
        <relationshipLabel>Payments Received</relationshipLabel>
        <relationshipName>Payments_Received</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Payment Received</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Pay-{000000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments Received</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>